--- a/templates/index.html
+++ b/templates/index.html
@@ -1,54 +1,9 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>A Simple Planner</title>
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-
-    <style>
-        /* Color palatte available at http://paletton.com/#uid=33y0u0koMBxaoZCfcULR7n+YkjK */
-        /* Set background color and 100% height */
-        .sidenav {
-          background-color: #AFD9FB;
-          height: 100%;
-        }
-
-        /* On small screens, set height to 'auto' for sidenav and grid */
-        @media screen and (max-width: 767px) {
-          .sidenav {
-            height: auto;
-            padding: 15px;
-          }
-          .row.content {height: auto;}
-        }
-    </style>
-
-</head>
-<body>
-
-<div class="container-fluid">
-  <div class="row content">
-    <div class="col-sm-3 sidenav">
-      <h3>Plan It All</h3>
-      <ul class="nav nav-pills nav-stacked">
-        <li class="active"><a href="/">Incomplete Tasks</a></li>
-        <li><a href="/addtask/">Add Task</a></li>
-      </ul><br>
-    </div>
-
-    <div class="col-sm-9" style="font-size: large">
+{% extends 'base.html' %}
+    {% block content %}
         <hr />
         {% for x in items %}
             <a href="/edittask/{{ x.pk }}/">
-            {{ x.title }} - {{ x.priority }} - Due on {{ x.due|date:"D d M Y" }} - {{ x.time_estimated }} mins</a>
+            {{ x.title }} - {{ x.priority }} - Due on {{ x.due_date|date:"M d" }} - {{ x.time_estimated }} mins</a>
             <hr />
         {% endfor %}
-    </div>
-  </div>
-</div>
-
-</body>
-</html>
+    {% endblock %}
