Displaying the priorites as text again on the todo list

--- a/templates/base.html
+++ b/templates/base.html
@@ -30,12 +30,8 @@
         }
     </style>
 
-    <script>
-        $( function() {
-            $( "#id_start_date" ).datepicker();
-            $( "#id_due_date" ).datepicker();
-        } );
-  </script>
+    {% block head %}
+    {% endblock %}
 
 </head>
 <body>
