--- a/templates/edittask.html
+++ b/templates/edittask.html
@@ -1,9 +1,21 @@
 {% extends 'base.html' %}
-    {% block content %}
-            <p></p>
-            <form action="/edittask/{{ taskid }}/" method="post">
-                {% csrf_token %}
-                {{ form.as_p }}
-                <input type="submit" class="btn btn-default" value="Save Task" />
-            </form>
-    {% endblock %}
+
+
+{% block head %}
+    <script>
+        $(document).ready(function() {
+            $("input:text:visible:first").focus();
+            $("#id_due_date").datepicker();
+        } );
+    </script>
+{% endblock %}
+
+
+{% block content %}
+    <p></p>
+    <form action="/edittask/{{ taskid }}/" method="post">
+        {% csrf_token %}
+        {{ form.as_p }}
+        <input type="submit" class="btn btn-default" value="Save Task" />
+    </form>
+{% endblock %}
