Estimated times and highlighting tasks in trouble

--- a/templates/base.html
+++ b/templates/base.html
@@ -40,7 +40,7 @@
   <div class="row content">
     <div class="col-sm-3 sidenav">
       <h3>Plan It All</h3>
-        <ul class="nav nav-pills nav-stacked">
+        <ul class="nav nav-pills nav-stacked" style="font-size: large">
             <li><a href="/index/">Incomplete Tasks</a></li>
             <li><a href="/bigtasks/">Big Tasks</a></li>
             <li><a href="/quicktasks/">Quick Tasks</a></li>
