Accounting for weekends and cleaning up the writing of task rows

--- a/templates/base.html
+++ b/templates/base.html
@@ -20,6 +20,10 @@
           height: 100%;
         }
 
+        mark, ::selection {
+            background: #FFC5AC;
+        }
+
         /* On small screens, set height to 'auto' for sidenav and grid */
         @media screen and (max-width: 767px) {
           .sidenav {
