--- a/templates/addtask.html
+++ b/templates/addtask.html
@@ -6,6 +6,8 @@
         $(document).ready(function() {
             $("input:text:visible:first").focus();
             $("#id_due_date").datepicker();
+            $("#id_title").addClass("form-control");
+            $("#addlink").addClass("active");
         } );
     </script>
 {% endblock %}
@@ -16,6 +18,6 @@
     <form action="/addtask/" method="post">
         {% csrf_token %}
         {{ form.as_p }}
-        <input type="submit" class="btn btn-default" value="Add Task" />
+        <input type="submit" class="btn btn-primary btn-lg" value="Add Task" />
     </form>
 {% endblock %}
