--- a/templates/edittask.html
+++ b/templates/edittask.html
@@ -6,6 +6,8 @@
         $(document).ready(function() {
             $("input:text:visible:first").focus();
             $("#id_due_date").datepicker();
+            $("#id_title").addClass("form-control");
+            $("#indexlink").addClass("active");
         } );
     </script>
 {% endblock %}
@@ -13,9 +15,9 @@
 
 {% block content %}
     <p></p>
-    <form action="/edittask/{{ taskid }}/" method="post">
+    <form action="/edittask/{{ taskid }}/" method="post" >
         {% csrf_token %}
         {{ form.as_p }}
-        <input type="submit" class="btn btn-default" value="Save Task" />
+        <input type="submit" class="btn btn-primary btn-lg" value="Save Task" >
     </form>
 {% endblock %}
